grammar.js
      source_file: $ => repeat(choice($.rule,
                                      $.fact,
                                      $.integrity_constraint,
                                      $.comment,
                                      $.weak_constraint,
                                      $.statement,
                                      $._script,
                                      $.theory_statement)),

            /* rules */
      fact: $ => seq($._head, '.'),

      _head: $ => choice($.literal,
                         alias($._head_aggregate, $.aggregate),
                         $.disjunction,
                         $.theory_atom),

      _body: $ => seq(repeat(choice(seq(choice($.literal,
                                               seq(optional($.default_negation),
                                                   optional($.default_negation),
                                                   choice(alias($._body_aggregate, $.aggregate),
                                                         $.theory_atom))),
                                        choice(',',
                                               ';')),
                                    seq($.conditional_literal, ';'))),
                      choice($.literal,
                             seq(optional($.default_negation),
                                 optional($.default_negation),
                                 choice(alias($._body_aggregate, $.aggregate),
                                       $.theory_atom)),
                             $.conditional_literal)),


      rule: $ => seq(optional(alias($._head, $.head)), ':-', optional(alias($._body, $.body)), '.'),

      /* rules end */

      _function_arguments: $ => seq(repeat(seq($.terms, choice(';', ','))), $.terms),

      function: $ => prec.right(seq($.identifier, optional(seq('(', optional($._function_arguments), ')')))),

      default_negation: $ => 'not',

      // inlined to disambiguate from minus
      identifier: $ => /_*[a-z][A-Za-z0-9_\']*/,

      atom: $ =>  seq(optional($.classical_negation), $.function),

      // no explicit conditional literals as then ambiguous between literal and conditional literal.
      // instead, easy to check whether condition follows
      literal: $ => seq(optional($.default_negation),
                        optional($.default_negation),
                        choice($.boolean,
                               $.atom,
                               $.comparison)),

      boolean: $ => choice('#true', '#false'),

      _script: $ => choice(
          $.python,
          $.lua
      ),

      _script_directive: $ => seq('#', $.script),

      script_contents: $ => /(?:(?:[^#])|(?:#[^e])|(?:#e[^n])|(?:#en[^d])|(?:#end[^\.]))+/,

      python: $ => seq(alias($._script_directive, $.directive),
                       '(python)', $.script_contents, '#end\.'),

      lua: $ => seq(alias($._script_directive, $.directive),
                    '(lua)', $.script_contents, '#end\.'),

      /* script stuff end */

      /* theories */
