test/corpus/script.txt
======
Python
======

python.

#script (python)

import clingo
N = clingo.Number

def gcd(a, b):
    if a.number == 0:
      return b
    else:
        na = a.number
        nb = b.number
        nc = nb % na
        return gcd(N(nc), a)

#end.

python.

---

(source_file
  (fact (literal (atom (function (identifier)))))
  (python (directive) (script_contents))
  (fact (literal (atom (function (identifier))))))


===
Lua
===

lua.

#script (lua)

clingo = require("clingo")
N = clingo.Number

function gcd(a, b)
  if a.number == 0 then
    return b
  else
    na = a.number
    nb = b.number
    nc = nb % na
    return gcd(N(nc), a)
  end
end

#end.

lua.

---

(source_file
  (fact (literal (atom (function (identifier)))))
  (lua (directive) (script_contents))
  (fact (literal (atom (function (identifier))))))
